--- a/class11/Vincent Chau Class 11.qmd
+++ b/class11/Vincent Chau Class 11.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Class 11 Genome informatics"
 author: "Vincent Chau"
-format: html
+format: gfm
 ---
 
 # Section 1. Proportion og G/G in a population
